--- a/Basics/Reading_files.ipynb
+++ b/Basics/Reading_files.ipynb
@@ -24,18 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "features = tf.placeholder(tf.int32, shape=[3], name='features')\n",
     "country = tf.placeholder(tf.string, name='country')\n",
-    "total = tf.reduce_sum(features,name='total')"
+    "total = tf.reduce_mean(features,name='total')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,14 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"United States\" 121\n\"Great Britain\" 67\n\"China\" 70\n\"Russia\" 56\n\"Germany\" 42\n\"Japan\" 41\n\"France\" 42\n\"South Korea\" 21\n\"Italy\" 28\n\"Australia\" 29\n\"Netherlands\" 19\n\"Hungary\" 15\n\"Brazil\" 19\n\"Spain\" 17\n\"Kenya\" 13\n\"Jamaica\" 11\n\"Croatia\" 10\n\"Cuba\" 11\n\"New Zealand\" 18\n\"Canada\" 22\n\"Uzbekistan\" 13\n\"Kazakhstan\" 17\n\"Colombia\" 8\n\"Switzerland\" 7\n\"Iran\" 8\n\"Greece\" 6\n\"Argentina\" 4\n\"Denmark\" 15\n\"Sweden\" 11\n\"South Africa\" 10\n\"Ukraine\" 11\n\"Serbia\" 8\n\"Poland\" 11\n\"North Korea\" 7\n\"Belgium\" 6\n\"Thailand\" 6\n\"Slovakia\" 4\n\"Georgia\" 7\n\"Azerbaijan\" 18\n\"Belarus\" 9\n\"Turkey\" 8\n\"Armenia\" 4\n\"Czech Republic\" 10\n\"Ethiopia\" 8\n\"Slovenia\" 4\n\"Indonesia\" 3\n\"Romania\" 5\n\"Bahrain\" 2\n\"Vietnam\" 2\n\"Chinese Taipei\" 3\n\"Bahamas\" 2\n\"Ivory Coast\" 2\n\"Independent Olympic Athletes\" 2\n\"Fiji\" 1\n\"Jordan\" 1\n\"Kosovo\" 1\n\"Puerto Rico\" 1\n\"Singapore\" 1\n\"Tajikistan\" 1\n\"Malaysia\" 5\n\"Mexico\" 5\n\"Algeria\" 2\n\"Ireland\" 2\n\"Lithuania\" 4\n\"Bulgaria\" 3\n\"Venezuela\" 3\n\"India\" 2\n\"Mongolia\" 2\n\"Burundi\" 1\n\"Grenada\" 1\n\"Niger\" 1\n\"Philippines\" 1\n\"Qatar\" 1\n\"Norway\" 4\n\"Egypt\" 3\n\"Tunisia\" 3\n\"Israel\" 2\n\"Austria\" 1\n\"Dominican Republic\" 1\n\"Estonia\" 1\n\"Finland\" 1\n\"Morocco\" 1\n\"Moldova\" 1\n\"Nigeria\" 1\n\"Portugal\" 1\n\"Trinidad and Tobago\" 1\n\"United Arab Emirates\" 1\n"
+      "\"United States\" 40\n\"Great Britain\" 22\n\"China\" 23\n\"Russia\" 18\n\"Germany\" 14\n\"Japan\" 13\n\"France\" 14\n\"South Korea\" 7\n\"Italy\" 9\n\"Australia\" 9\n\"Netherlands\" 6\n\"Hungary\" 5\n\"Brazil\" 6\n\"Spain\" 5\n\"Kenya\" 4\n\"Jamaica\" 3\n\"Croatia\" 3\n\"Cuba\" 3\n\"New Zealand\" 6\n\"Canada\" 7\n\"Uzbekistan\" 4\n\"Kazakhstan\" 5\n\"Colombia\" 2\n\"Switzerland\" 2\n\"Iran\" 2\n\"Greece\" 2\n\"Argentina\" 1\n\"Denmark\" 5\n\"Sweden\" 3\n\"South Africa\" 3\n\"Ukraine\" 3\n\"Serbia\" 2\n\"Poland\" 3\n\"North Korea\" 2\n\"Belgium\" 2\n\"Thailand\" 2\n\"Slovakia\" 1\n\"Georgia\" 2\n\"Azerbaijan\" 6\n\"Belarus\" 3\n\"Turkey\" 2\n\"Armenia\" 1\n\"Czech Republic\" 3\n\"Ethiopia\" 2\n\"Slovenia\" 1\n\"Indonesia\" 1\n\"Romania\" 1\n\"Bahrain\" 0\n\"Vietnam\" 0\n\"Chinese Taipei\" 1\n\"Bahamas\" 0\n\"Ivory Coast\" 0\n\"Independent Olympic Athletes\" 0\n\"Fiji\" 0\n\"Jordan\" 0\n\"Kosovo\" 0\n\"Puerto Rico\" 0\n\"Singapore\" 0\n\"Tajikistan\" 0\n\"Malaysia\" 1\n\"Mexico\" 1\n\"Algeria\" 0\n\"Ireland\" 0\n\"Lithuania\" 1\n\"Bulgaria\" 1\n\"Venezuela\" 1\n\"India\" 0\n\"Mongolia\" 0\n\"Burundi\" 0\n\"Grenada\" 0\n\"Niger\" 0\n\"Philippines\" 0\n\"Qatar\" 0\n\"Norway\" 1\n\"Egypt\" 1\n\"Tunisia\" 1\n\"Israel\" 0\n\"Austria\" 0\n\"Dominican Republic\" 0\n\"Estonia\" 0\n\"Finland\" 0\n\"Morocco\" 0\n\"Moldova\" 0\n\"Nigeria\" 0\n\"Portugal\" 0\n\"Trinidad and Tobago\" 0\n\"United Arab Emirates\" 0\n"
      ]
     }
    ],
@@ -65,8 +65,17 @@
     "            gold=int(gold)\n",
     "            silver=int(silver)\n",
     "            bronze=int(bronze)\n",
-    "            total=sess.run(printerop, feed_dict={features:[gold,silver,bronze], country:country_name})\n",
-    "            print(country_name,total)"
+    "            total1=sess.run(printerop, feed_dict={features:[gold,silver,bronze], country:country_name})\n",
+    "            print(country_name,total1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
    ]
   }
  ],
