--- a/Learning Tensorflow/Basics/Reading_files.ipynb
+++ b/Learning Tensorflow/Basics/Reading_files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -14,17 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir=join(dirname(realpath(dirname('__file__'))),'tensorflow/Files')\n",
+    "dir=join(dirname(realpath(dirname(realpath(dirname('__file__'))))),'Files')\n",
     "filename = dir + '/Olympics2016.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
